# nornickel-ai-hackathon-2026

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  Makefile  README.md  lefthook.yml
backend/: buf.gen.yaml  buf.yaml
backend/archive-scan/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  check_eda_parity.py  deny.toml
backend/archive-scan/benches/: hot_path.rs
backend/archive-scan/deploy/kubernetes/: archive-scan.yaml
backend/archive-scan/src/: app.rs  cancel.rs  engine.rs  extract.rs  lib.rs  magika_support.rs  main.rs  output.rs  row.rs  scan.rs  service.rs
backend/archive-scan/src/backend/: libarchive.rs  mod.rs
backend/archive-scan/src/service/: config.rs  error.rs  job_workflow.rs  jobs.rs  metrics_export.rs  model.rs  openapi.rs  result_store.rs  scanning.rs  source.rs  state.rs  tests.rs  upload.rs
backend/archive-scan/src/service/extract/: metadata.rs  mod.rs  store.rs
backend/archive-scan/src/service/jobs/: postgres_backend.rs  redis_backend.rs  state_backend.rs
backend/archive-scan/src/service/result_store/: filesystem.rs  s3.rs  tests.rs
backend/archive-scan/src/service/tests/: api_contract.rs  async_job_execution.rs  health_readiness.rs  job_cancellation.rs  job_creation.rs  job_metrics.rs  job_results.rs  job_retention_recovery.rs  scan_routes.rs  validation_errors.rs
backend/archive-scan/tests/: allocation_regression.rs  integration_test.rs
backend/archive-scan/tests/baselines/: hot_path_allocations.json
backend/archive-scan/tests/integration/: cli_workflows.rs  domain_detection.rs  http_contract.rs  job_store_workflows.rs  object_source_workflows.rs  stateless_extract_workflow.rs
backend/archive-scan/tests/support/: mod.rs
backend/archive-worker/: Dockerfile  go.mod  go.sum
backend/archive-worker/cmd/worker/: main.go
backend/archive-worker/internal/application/: processor.go  processor_test.go
backend/archive-worker/internal/domain/: domain.go
backend/auth/: Dockerfile  go.mod  go.sum
backend/auth/cmd/server/: main.go  main_test.go
backend/auth/internal/application/: refresh_test.go  service.go  service_test.go
backend/chunk-splitter/: Dockerfile  README.md  go.mod  go.sum
backend/db-parser/: .dockerignore  Dockerfile  go.mod  go.sum
backend/db-service/: Dockerfile  go.mod  go.sum  sqlc.yaml
backend/email-parser/: Dockerfile  go.mod  go.sum
backend/llm-service/: Dockerfile  go.mod  go.sum
backend/main-service/: Dockerfile  go.mod  go.sum
backend/ocr-service/: Dockerfile  go.mod  go.sum
backend/office-parser/: Dockerfile  go.mod  go.sum
backend/pdf-parser/: Dockerfile  go.mod  go.sum
backend/platform/: go.mod  go.sum
backend/vlm-service/: Dockerfile  go.mod
docs/: ARCHITECTURE.md  DEMO-CASE-TOF.md  DEPLOY-QUICKSTART.md  README.md
docs/product/: ALGORITHMS_AND_ML_MODELS.md  HYPOTHESIS_GENERATION.md  PRODUCT_PAGES_AND_IDEAS.md  RAG_BUSINESS_TECHNICAL_OVERVIEW.md
docs/product/presentation/: hackathon_rd_hypotheses_deck.html
docs/schemas/: README.md
frontend/: .dockerignore  .gitignore  .oxfmtignore  .oxlintrc.json  Dockerfile  README.md  index.html  knip.json  nginx.conf.template  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css  index.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  AppLayout.tsx  ErrorPages.tsx
frontend/src/shared/: appSettings.ts  glossary.ts  types.ts
frontend/tests/: bun-setup.ts
frontend/tests/e2e/: a11y.spec.ts  global-setup.ts
infra/: .env.example  docker-compose.test.yml  docker-compose.yml
infra/grafana/dashboards/: rag.json
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
infra/rabbitmq/: rabbitmq.conf
infra/seaweedfs/: filer.toml
infra/vector/: vector.yaml
ml-services/cluster-worker/: Dockerfile  README.md  worker.py
ml-services/diagram-parser-service/: Dockerfile  Dockerfile.paddle5  README.md  pyproject.toml
ml-services/diagram-parser-service/diagram_parser_service/: __init__.py  paddle5_ocr.py  render.py  server.py  tiles.py
ml-services/diagram-parser-service/diagram_parser_service/cv_parser/: __init__.py  blocks.py  connectors.py  graph.py  image.py  labels.py  layout.py  models.py  ocr.py  stage_blocks.py
ml-services/diagram-parser-service/tests/: test_cv_parser.py  test_paddle5_ocr.py  test_server.py  test_tiles.py
ml-services/discovery-worker/: Dockerfile  README.md  worker.py
ml-services/eval-service/: .dockerignore  Dockerfile  README.md  dataset-hypotheses.jsonl  dataset.jsonl  evaluate.py  worker.py
ml-services/f2llm-service/: Dockerfile  README.md  f2llm_server.py
ml-services/graph-compute/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml
ml-services/graph-compute/benches/: hot_path.rs
ml-services/graph-compute/src/: config.rs  lib.rs
ml-services/graph-compute/src/application/: mod.rs  service.rs
ml-services/graph-compute/src/domain/: bridge.rs  cluster.rs  config.rs  fingerprint.rs  graph.rs  knn.rs  lineage.rs  metrics.rs  mod.rs  pagerank.rs  paths.rs  vector.rs
ml-services/graph-compute/src/infrastructure/: leiden.rs  mod.rs  qdrant.rs
ml-services/graph-compute/src/interfaces/: grpc.rs  http.rs  metrics.rs  mod.rs
ml-services/graph-compute/tests/: allocation_regression.rs  bridge_service.rs  cluster_service.rs  reasoning_service.rs
ml-services/graph-compute/tests/baselines/: hot_path_allocations.json
ml-services/itc-worker/: .dockerignore  Dockerfile  itc.py  itc_rubric.json  requirements.txt  worker.py
ml-services/paddleocr-vl-service/: Dockerfile  README.md  paddleocr_vl_server.py  requirements.txt
ml-services/raptor-worker/: Dockerfile  README.md  requirements.txt  worker.py
ml-services/reranker-service/: Dockerfile  requirements.txt  reranker_server.py
ml-services/workbook-parser-service/: Cargo.toml  Dockerfile  README.md
ml-services/workbook-parser-service/src/: coords.rs  http.rs  lib.rs  main.rs  model.rs  parser.rs
ml-services/workbook-parser-service/src/render/: blocks.rs  headers.rs  markdown.rs  mod.rs  sidecar.rs
ml-services/workbook-parser-service/tests/: parse_xlsx.rs
(+752 files in other folders)
