[package]
name = "archive_scan"
version = "0.1.0"
edition = "2021"
rust-version = "1.96.0"
description = "High-throughput archive scanner with magic-byte and Magika detection plus NDJSON/Parquet export"
license = "MIT"
readme = "README.md"
keywords = ["archive", "scanner", "parquet", "ndjson", "forensics"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "archive_scan"
path = "src/lib.rs"

[[bin]]
name = "archive_scan"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "archive_scan_server"
path = "src/bin/archive_scan_server.rs"
required-features = ["service"]

[dependencies]
# обход ФС и параллелизм
walkdir = "2.5.0"
rayon = "1.12.0"

# прогресс-бар как tqdm
indicatif = { version = "0.18.4", optional = true }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }

# типы, сериализация
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# хэши
blake3 = "1.8.5"

# Magika: AI-детектор типа файла
magika = { version = "1.1.0" }

# чтение архивов через libarchive, потоково и без распаковки на диск
archive-reader = "0.4.2"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# error handling
anyhow = "1.0.102"

smallvec = "1.15.1"
ahash = "0.8.12"
crossbeam-channel = "0.5.15"

flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
jemallocator = { version = "0.5", optional = true }
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
parquet = { version = "58.3.0", features = ["arrow"] }
axum = { version = "0.8.9", features = ["multipart"], optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "net"], optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "multipart", "rustls"], optional = true }
redis = { version = "1.2.2", features = ["r2d2"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
r2d2_postgres = { version = "0.18.2", optional = true }
postgres = { version = "0.19.13", features = ["with-serde_json-1"], optional = true }
quick-xml = { version = "0.40.1", optional = true }
sha2 = { version = "0.11.0", optional = true }
hmac = { version = "0.13.0", optional = true }
url = { version = "2.5.8", optional = true }
time = { version = "0.3.47", features = ["formatting", "macros"], optional = true }
tempfile = "3.27.0"
utoipa = { version = "5.5.0", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"], optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support", "html_reports"] }
stats_alloc = "0.1.10"
tower = { version = "0.5.3", features = ["util"] }

[[bench]]
name = "hot_path"
harness = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif"]
service = ["dep:axum", "dep:tokio", "dep:reqwest", "dep:redis", "dep:r2d2", "dep:r2d2_postgres", "dep:postgres", "dep:quick-xml", "dep:sha2", "dep:hmac", "dep:url", "dep:time", "dep:clap", "dep:utoipa", "dep:tracing", "dep:tracing-subscriber"]
jemalloc = ["jemallocator"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = 1

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"
unreachable_pub = "warn"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }

dbg_macro = "deny"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "allow"
future_not_send = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
match_bool = "warn"
mem_forget = "warn"
mutex_atomic = "warn"
needless_pass_by_value = "allow"
panic = "allow"
rc_mutex = "warn"
readonly_write_lock = "warn"
redundant_closure_for_method_calls = "warn"
return_self_not_must_use = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
struct_excessive_bools = "allow"
todo = "warn"
too_many_lines = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
used_underscore_binding = "warn"

await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

cargo = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }
blanket_clippy_restriction_lints = "allow"
if_not_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
similar_names = "allow"
