[project]
name = "diagram-parser-service"
version = "0.1.0"
description = "HTTP adapter for local diagram graph extraction used by vlm-service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.12.0",
    "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
paddle5 = [
    "paddleocr==3.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.56",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["diagram_parser_service*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
