[package]
name = "workbook_parser_service"
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["multipart"] }
calamine = { version = "0.35.0", features = ["dates"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
